--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
       </header>
 
       <p>
-        A notebook with manners. Strong biases, earned politely. Drawings where helpful. Occasional experimental geometry
+        A notebook with manners. Strong biases, earned with polite violence. Drawings where helpful. Occasional experimental geometry
         presented without apology.
       </p>
       <p>
-        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly.
+        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly and prove it with iorn.
       </p>
 
       <div class="deco-divider"></div>
