--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <p>
         Welcome to a salon for the spirited and the particular. Expect fencing notes, HEMA curiosities,
-        and occasional illustrations — all poured neat, no chaser. Dress code is <em>decided opinions</em> and
+        and occasional illustrations, pourd neat, no chaser. Dress code is <em>decided opinions</em> and
         <em>sharpened curiosity</em>.
       </p>
 
@@ -83,7 +83,7 @@
         </li>
       </ul>
 
-      <p class="fineprint">Programs updated irregularly, like a jazz trio with a grudge.</p>
+      <p class="fineprint">Programs updated irregularly.</p>
     </section>
   </main>
 
@@ -92,7 +92,7 @@
       <div class="foot-grid">
         <div>
           <div class="foot-title">Old Man Yells at HEMA</div>
-          <div class="foot-sub">Established in a fit of good judgment.</div>
+          <div class="foot-sub">Established in a fit of bad judgment and questionable taste.</div>
         </div>
         <div class="foot-right">
           <a class="foot-link" href="mailto:hello@example.com">RSVP</a>
