--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <span class="corner br" aria-hidden="true"></span>
 
       <header class="invite">
-        <div class="invite-topline">— A Private Invitation —</div>
-        <h2 class="invite-title">An Evening of Blades & Black Tie</h2>
+        <div class="invite-topline">— A Private Invitation to Nonsense —</div>
+        <h2 class="invite-title">An Event of Blades and Art</h2>
         <div class="invite-sub">at the House of Quiet Arguments</div>
       </header>
 
