--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="invite-sub">at the House of Quiet Arguments</div>
       </header>
 
-      <p>
+      <p style="text-align:center;">
         Welcome to a salon for the spirited and the particular. Expect fencing notes, HEMA curiosities,
         and occasional illustrations, pourd neat, no chaser. Dress code is <em>decided opinions</em> and
         <em>sharpened curiosity</em>.
