--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Old Man Yells at HEMA — A Deco Salon</title>
   <meta name="description" content="An Art Deco, Gatsby‑dark starter template for a blog/portfolio." />
+  
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Cormorant+Garamond:ital,wght@0,400;0,500;0,700;1,400&family=Poiret+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css" />
+
 </head>
 <body>
+  
   <header class="nav">
     <div class="wrap">
       <div class="brand-left" aria-hidden="true"></div>
@@ -32,14 +35,14 @@
       <span class="corner br" aria-hidden="true"></span>
 
       <header class="invite">
-        <div class="invite-topline">— A Private Invitation to Nonsense —</div>
-        <h2 class="invite-title">An Event of Blades and Art</h2>
+        <div class="invite-topline">— A Private Invitation —</div>
+        <h2 class="invite-title">An Evening of Blades & Black Tie</h2>
         <div class="invite-sub">at the House of Quiet Arguments</div>
       </header>
 
-      <p style="text-align:center;">
+      <p>
         Welcome to a salon for the spirited and the particular. Expect fencing notes, HEMA curiosities,
-        and occasional illustrations, pourd neat, no chaser. Dress code is <em>decided opinions</em> and
+        and occasional illustrations — all poured neat, no chaser. Dress code is <em>decided opinions</em> and
         <em>sharpened curiosity</em>.
       </p>
 
@@ -83,16 +86,16 @@
         </li>
       </ul>
 
-      <p class="fineprint">Programs updated irregularly.</p>
+      <p class="fineprint">Programs updated irregularly, like a jazz trio with a grudge.</p>
     </section>
   </main>
-
+  
   <footer class="site-foot">
     <div class="wrap">
       <div class="foot-grid">
         <div>
           <div class="foot-title">Old Man Yells at HEMA</div>
-          <div class="foot-sub">Established in a fit of bad judgment and questionable taste.</div>
+          <div class="foot-sub">Established in a fit of good judgment.</div>
         </div>
         <div class="foot-right">
           <a class="foot-link" href="mailto:hello@example.com">RSVP</a>
@@ -102,7 +105,7 @@
       </div>
     </div>
   </footer>
-
   <script src="assets/js/main.js" defer></script>
+
 </body>
 </html>
