--- a/about.html
+++ b/about.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>About — House Rules</title>
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — House Rules</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Cormorant+Garamond:ital,wght@0,400;0,500;0,700;1,400&family=Poiret+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css" />
+
 </head>
 <body>
+  
   <header class="nav">
     <div class="wrap">
       <div class="brand-left" aria-hidden="true"></div>
@@ -36,11 +39,11 @@
       </header>
 
       <p>
-        A notebook with manners. Strong biases, earned with polite violence. Drawings where helpful. Occasional experimental geometry
+        A notebook with manners. Strong biases, earned politely. Drawings where helpful. Occasional experimental geometry
         presented without apology.
       </p>
       <p>
-        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly and prove it with iorn.
+        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly.
       </p>
 
       <div class="deco-divider"></div>
@@ -53,7 +56,7 @@
       </ul>
     </section>
   </main>
-
+  
   <footer class="site-foot">
     <div class="wrap">
       <div class="foot-grid">
@@ -69,7 +72,7 @@
       </div>
     </div>
   </footer>
-
   <script src="assets/js/main.js" defer></script>
+
 </body>
 </html>
