--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
       <span class="corner bl" aria-hidden="true"></span>
       <span class="corner br" aria-hidden="true"></span>
 
-      <header class="invite small">
-        <div class="invite-topline">— House Rules —</div>
-        <h2 class="invite-title">What This Is (and Isn’t)</h2>
+      <header class="invite small" text-align: center;>
+        <div class="invite-topline text-align: center;">— House Rules —</div>
+        <h2 class="invite-title" text-align: center;>What This Is (and Isn’t)</h2>
       </header>
 
       <p>
-        A notebook with manners. Strong biases, earned politely. Drawings where helpful. Occasional experimental geometry
+        A Site with manners. Strong biases, earned politely through violence. Drawings where helpful. Occasional experimental geometry
         presented without apology.
       </p>
       <p>
