--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         presented without apology.
       </p>
       <p>
-        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly.
+        Comments, ads, and pop‑ups are out. RSS and email are welcome. If you must disagree, please do so stylishly and come fight me.
       </p>
 
       <div class="deco-divider"></div>
