--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="invite-sub" text-align: center;>at the House of Quiet Arguments</div>
       </header>
 
-      <p>
+      <p text-align: center;>
         Welcome to a salon for the spirited and the particular. Expect fencing notes, HEMA curiosities,
-        and occasional illustrations — all poured neat, no chaser. Dress code is <em>decided opinions</em> and
+        and occasional illustrations poured neat, no chaser. Dress code is <em>decided opinions</em> and
         <em>sharpened curiosity</em>.
       </p>
 
@@ -95,7 +95,7 @@
       <div class="foot-grid">
         <div>
           <div class="foot-title">Old Man Yells at HEMA</div>
-          <div class="foot-sub">Established in a fit of good judgment.</div>
+          <div class="foot-sub">Established in a fit of bad judgment.</div>
         </div>
         <div class="foot-right">
           <a class="foot-link" href="mailto:hello@example.com">RSVP</a>
