--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 
       <div class="cta-row" style="text-align:center;">
         <a class="btn" href="{{ '/posts/' | relative_url }}">Peruse the Program</a>
-        <a class="btn ghost" href="{{ '/resources/' | relative_url }}">Enter the Library</a>
+        <a class="btn" href="{{ '/library/' | relative_url }}">Enter the Library</a>
       </div>
     </section>
 
